change impl to support whitebox test